@@ -1,0 +1,12 @@
+Processor	: ARM926EJ-S rev 5 (v5l)
+BogoMIPS	: 489.88
+Features	: swp half thumb fastmult vfp edsp java 
+CPU implementer	: 0x41
+CPU architecture: 5TEJ
+CPU variant	: 0x0
+CPU part	: 0x926
+CPU revision	: 5
+
+Hardware	: ARM-Versatile PB
+Revision	: 0000
+Serial		: 0000000000000000
