@@ -1,0 +1,21 @@
+subarch versatile
+cpuinfo qemu-versatilepb.cpuinfo
+majors 2.6
+flavour versatile
+kernel-2.6 linux-image-2.6-versatile
+usable \
+  linux-image-2.6-versatile \
+  linux-image-2.6.18-4-versatile
+unusable \
+  linux-image-2.6-iop32x \
+  linux-image-2.6-ixp4xx \
+  linux-image-2.6-netwinder \
+  linux-image-2.6-orion5x \
+  linux-image-2.6-rpc \
+  linux-image-2.6-s3c2410 \
+  linux-image-2.6.18-4-iop32x \
+  linux-image-2.6.18-4-ixp4xx \
+  linux-image-2.6.18-4-netwinder \
+  linux-image-2.6.18-4-orion5x \
+  linux-image-2.6.18-4-rpc \
+  linux-image-2.6.18-4-s3c2410
